; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_diff-patch.c_vk_diff.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_diff-patch.c_vk_diff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vk_diff(i8* %0, i32 %1, i8* %2, i32 %3, i8* %4, i32 %5, i32 %6, double %7) #0 {
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca double, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  store i8* %0, i8** %9, align 8
  store i32 %1, i32* %10, align 4
  store i8* %2, i8** %11, align 8
  store i32 %3, i32* %12, align 4
  store i8* %4, i8** %13, align 8
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  store double %7, double* %16, align 8
  %19 = load i32, i32* %17, align 4
  %20 = call i32 @dyn_mark(i32 %19)
  %21 = load i8*, i8** %9, align 8
  %22 = load i32, i32* %10, align 4
  %23 = load i8*, i8** %11, align 8
  %24 = load i32, i32* %12, align 4
  %25 = load i8*, i8** %13, align 8
  %26 = load i32, i32* %14, align 4
  %27 = load i32, i32* %15, align 4
  %28 = load double, double* %16, align 8
  %29 = call i32 @find_diff(i8* %21, i32 %22, i8* %23, i32 %24, i8* %25, i32 %26, i32 %27, double %28)
  store i32 %29, i32* %18, align 4
  %30 = load i32, i32* %17, align 4
  %31 = call i32 @dyn_release(i32 %30)
  %32 = load i32, i32* %18, align 4
  ret i32 %32
}

declare dso_local i32 @dyn_mark(i32) #1

declare dso_local i32 @find_diff(i8*, i32, i8*, i32, i8*, i32, i32, double) #1

declare dso_local i32 @dyn_release(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
